# lifter-api

./: .env.copy  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING  Pipfile  README.md  docker-compose.yaml  index.html  makefile  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  search.html  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: backend.yml  bumpversion.yml  coverage.yml  docs.yml  frontend.yml  main.yml
about/: index.html
api/: urls.py
api/migrations/: 0003_liftermodel_competition.py  0004_alter_liftermodel_lifter_id_and_more.py  0005_alter_liftermodel_lifter_id_and_more.py  0007_remove_lift_session_lift_session_datetime_and_more.py  0012_remove_session_session_number.py  0015_alter_lift_lottery_number.py  0018_remove_lift_competition.py  0019_alter_lift_reference_id_alter_session_reference_id.py
api/models/: athletes.py  competitions.py
api/models/utils/: ranking.py
api/serializers/: athletes.py  lifts.py  sessions.py
api/views/: athletes.py
backend/: .coveragerc  .gunicorn.conf.py  Dockerfile  Pipfile  README.md  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  setup.py
backend/api/: __init__.py  admin.py  apps.py  urls.py
backend/api/migrations/: 0001_initial.py  0002_alter_athlete_yearborn_and_more.py  0003_alter_competition_options_and_more.py  0004_team_session_and_more.py  0005_alter_lift_team.py  0006_remove_lift_session_lottery_unique_combination_and_more.py  0007_install_pg_trgm.py  0008_alter_lift_weight_category.py  0009_era.py  0010_alter_era_options.py  0011_alter_era_options_era_category_type_and_more.py  0012_delete_era.py  0013_agecategory_era_and_more.py  0013_lift_session.py  0014_agecategoryera_remove_agecategory_era_delete_era.py  0015_agecategory_era.py  0016_weightcategoryera_alter_agecategory_era_and_more.py  0017_alter_lift_cnj_first_alter_lift_cnj_first_weight_and_more.py  0017_auto_20220923_1135.py  0018_alter_agecategory_options_and_more.py  0019_historicalcompetition.py  0020_alter_lift_bodyweight.py  0020_historicallift_historicalathlete.py  0021_alter_athlete_options_alter_competition_options_and_more.py  0021_historicallift_new_cnj_first_and_more.py  0021_remove_weightcategory_age_categories_and_more.py  0022_auto_20221003_1724.py  0023_remove_team_team_team_date_ended_and_more.py  0024_alter_team_date_established.py
backend/api/models/: __init__.py  athletes.py  competitions.py  gradings.py  lifts.py  sessions.py  teams.py  venues.py
backend/api/models/managers/: __init__.py  athletes.py  competitions.py  lifts.py
backend/api/models/support/: __init__.py  age_categories.py  base_era.py  gradings.py  weight_categories.py
backend/api/models/utils/: __init__.py  age_categories.py  choices.py  constants.py  grading.py  helpers.py  types.py  weight_categories.py
backend/api/serializers/: __init__.py  athletes.py  competitions.py  lifts.py  search.py  sessions.py
backend/api/tests/: conftest.py  factories.py  mock_data.py  test_athletes.py  test_competitions.py  test_search.py
backend/api/tests/factories/: __init__.py  (+3 more)
backend/api/views/: __init__.py  athletes.py  competitions.py  lifts.py  pagination.py  search.py  sessions.py
backend/config/: __init__.py  settings.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
backend/tests/: conftest.py
backend/tests/factories/: athletes.py  competitions.py  fake.py  lifts.py
backend/tests/test_api/: test_athletes.py  test_competitions.py  test_lifts.py
backend/users/: __init__.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
config/: urls.py
config/settings/: base.py  prod.py
docs/: about.md  grading.md  how.md  index.md  placing.md
frontend/: Dockerfile  README.md  babel.config.js  jest.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  constants.ts  index.css  index.tsx  interfaces.d.ts  interfaces.ts  setupTests.ts
grading/: index.html
how/: index.html
placing/: index.html
search/: search_index.json
talk/: talk.md
users/: admin.py  models.py
users/migrations/: 0001_initial.py
web/backend/: Dockerfile  Pipfile  entrypoint.sh  manage.py
web/backend/api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
web/backend/config/: urls.py
web/backend/users/: admin.py  serializers.py
web/frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json
web/frontend/src/: App.tsx  index.css  index.tsx  interfaces.ts
weight_categories/: index.html
(+234 files in other folders)
